[gd_scene load_steps=3 format=2]

[ext_resource path="res://scripts/LinesComplete.gd" type="Script" id=1]
[ext_resource path="res://basic_theme.tres" type="Theme" id=2]

[node name="Node2D" type="Node2D"]
script = ExtResource( 1 )

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="Control" type="Control" parent="CanvasLayer"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 2 )

[node name="ColorRect" type="ColorRect" parent="CanvasLayer/Control"]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.0941176, 0.0941176, 0.0941176, 1 )

[node name="pCon" type="PanelContainer" parent="CanvasLayer/Control"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 10.0
margin_top = 10.0
margin_right = -10.0
margin_bottom = -10.0

[node name="VBox" type="VBoxContainer" parent="CanvasLayer/Control/pCon"]
margin_left = 7.0
margin_top = 7.0
margin_right = 997.0
margin_bottom = 573.0

[node name="HBox" type="HBoxContainer" parent="CanvasLayer/Control/pCon/VBox"]
margin_right = 990.0
margin_bottom = 25.0

[node name="Label" type="Label" parent="CanvasLayer/Control/pCon/VBox/HBox"]
margin_top = 3.0
margin_right = 935.0
margin_bottom = 22.0
size_flags_horizontal = 3
text = "Congratulations!"
align = 1

[node name="HomeButton" type="Button" parent="CanvasLayer/Control/pCon/VBox/HBox"]
margin_left = 939.0
margin_right = 990.0
margin_bottom = 25.0
text = "Home"

[node name="Label" type="Label" parent="CanvasLayer/Control/pCon/VBox"]
margin_top = 29.0
margin_right = 990.0
margin_bottom = 48.0
text = "Congratulations on completing all of your sentences. Your Dominant(s) has/have a message just for you."
align = 1
autowrap = true

[node name="Center" type="CenterContainer" parent="CanvasLayer/Control/pCon/VBox"]
margin_top = 52.0
margin_right = 990.0
margin_bottom = 566.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="DomLabel" type="Label" parent="CanvasLayer/Control/pCon/VBox/Center"]
margin_left = 427.0
margin_top = 240.0
margin_right = 563.0
margin_bottom = 273.0
theme_type_variation = "LargeLabel"
text = "Good job!"
